--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,7 +6,7 @@
   --max-width: 1100px;
   --border-radius: 12px;
   --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
+  --background-start-rgb: 255, 255, 255;
   --background-end-rgb: 255, 255, 255;
   --callout-rgb: 238, 240, 241;
   --callout-border-rgb: 172, 175, 176;
@@ -32,13 +32,13 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  /*outline: red 1px solid;*/
 }
 
 html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  background-color: black;
 }
 
 body {
